fix overflow-hidden to clip :scrollbar layout shift problem

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     background-color: black;
     color: white;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow-x:clip;
 }
 
 @utility flex-center {
@@ -61,7 +61,7 @@ body {
 
 @layer components {
     main {
-        @apply w-full overflow-x-hidden;
+        @apply w-full overflow-x-clip;
     }
 
     nav {
@@ -133,7 +133,7 @@ body {
     }
 
     video {
-        @apply w-full md:h-[85%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
+        @apply w-full md:h-[85%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover overflow-hidden;
     }
 
     #cocktails {
